fix integration